# hydra

./: README.md
cusdrk/Source/bld/moc/: moc_cusdr_agcWidget.cpp  moc_cusdr_audioReceiver.cpp  moc_cusdr_audio_engine.cpp  moc_cusdr_buttons.cpp  moc_cusdr_colorTriangle.cpp  moc_cusdr_cpuUsage_unix.cpp  moc_cusdr_dataEngine.cpp  moc_cusdr_dataIO.cpp  moc_cusdr_discoverer.cpp  moc_cusdr_displayWidget.cpp  moc_cusdr_fonts.cpp  moc_cusdr_hpsdrTabWidget.cpp  moc_cusdr_led.cpp  moc_cusdr_mainWidget.cpp  moc_cusdr_oglWidebandPanel.cpp  moc_cusdr_radioPopupWidget.cpp  moc_cusdr_radioTabWidget.cpp  moc_cusdr_radioWidget.cpp  moc_cusdr_receiver.cpp  moc_cusdr_receiverWidget.cpp  moc_cusdr_settings.cpp  moc_qtdsp_demodulation.cpp  moc_qtdsp_dspEngine.cpp  moc_soundout.cpp
hardware/: README
hardware/hydra/: eagle.epf  mixer-bom.txt  mixer.brd  mixer.pro  mixer.sch  receiver-bom.txt  receiver.brd  receiver.pro  receiver.sch
hardware/lbr/: crystek-tcxo.lbr  dt-passives.lbr  dt-pll.lbr  minicir-dt.lbr  odroid-dt.lbr  ti-i2c.lbr  ti-pll.lbr  triquint-dt.lbr
hardware/multicoupler/: MultiCoupler.brd  MultiCoupler.pro  MultiCoupler.sch  eagle.epf
librtlhpsdr/: README
librtlhpsdr/include/: rtl_hpsdr.h
librtlhpsdr/src/: rtl_hpsdr.c
software/cusdrk/Source/: Makefile
software/cusdrk/Source/bld/moc/: moc_cusdr_alexAntennaWidget.cpp  moc_cusdr_alexFilterWidget.cpp  moc_cusdr_alexTabWidget.cpp  moc_cusdr_audio_settingsdialog.cpp  moc_cusdr_audio_spectrumanalyser.cpp  moc_cusdr_audio_waveform.cpp  moc_cusdr_chirpProcessor.cpp  moc_cusdr_chirpWidget.cpp  moc_cusdr_colorsWidget.cpp  moc_cusdr_displayTabWidget.cpp  moc_cusdr_extCtrlWidget.cpp  moc_cusdr_hpsdrWidget.cpp  moc_cusdr_networkWidget.cpp  moc_cusdr_oglDisplayPanel.cpp  moc_cusdr_oglDistancePanel.cpp  moc_cusdr_oglInfo.cpp  moc_cusdr_oglReceiverPanel.cpp  moc_cusdr_serverWidget.cpp  moc_cusdr_transmitOptionsWidget.cpp  moc_cusdr_transmitPAWidget.cpp  moc_cusdr_transmitTabWidget.cpp  moc_qtdsp_dualModeAverager.cpp  moc_qtdsp_fft.cpp  moc_qtdsp_filter.cpp  moc_qtdsp_powerSpectrum.cpp  moc_qtdsp_signalMeter.cpp  moc_qtdsp_wpagc.cpp
software/cusdrk/Source/bld/rcc/: qrc_cusdr.cpp
software/cusdrk/Source/src/: cusdr_settings.h
software/i2c/: README  dump_regs.sh  pllinit.sh  pllregs.txt
software/librtlhpsdr/: CMakeLists.txt  cal.sh
software/librtlhpsdr/cmake/Modules/: FindFFTW3.cmake  FindLibLIQUID.cmake
software/librtlhpsdr/include/: rtl_hpsdr.h
software/librtlhpsdr/src/: CMakeLists.txt  CMakeLists.txt.orig  downsample.c  downsample.c~  librtlsdr.c  rtl_hpsdr.c  rtl_hpsdr.c.iir  rtl_hpsdr.conf  rtl_hpsdr.c~  rtl_power.c  tuner_r82xx.c
software/librtlhpsdr/src/convenience/: convenience.h
software/plotter/: Cache.txt  Cache.txt.bck  README  gmap.html  plotter.sh  poller.sh  rtty_plot.sh
